Make sure that warning message when GROUP_CONCAT() cuts values is also updated with the correct number of lines. (Bug #8681)